2007-08-26 seletz <stefan.eletzhofer@inquant.de>
	* created branch for adding plone 3.0 fixes
	* added CHANGELOG